objects/TW1_Atividade_do_Cliente__c.object
<CustomObject>
    <description>Objeto criado  para armazenar atividades dos usuarios quando:
Acessarem wifi
Abrirem aplicativo
Usarem o serviço de reserva de restaurantes
Participarem de programas de incentivo
etc</description>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Não existem registros com o filtro selecionado</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Conta pessoal padrão</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Atividades do Cliente</relationshipLabel>
        <relationshipName>Atividades_do_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Hora_atividade__c</fullName>
        <label>Data/Hora atividade</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Origem__c</fullName>
        <label>Origem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aplicativo</fullName>
                </value>
                <value>
                    <fullName>Wifi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baixou aplicativo</fullName>
                </value>
                <value>
                    <fullName>Pesquisou loja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Atividade do Cliente</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATV-{000}</displayFormat>
        <label>Num. Atividade do Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Atividades do Cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>